// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CircleVariant without crashing 1`] = `
<body>
  <div>
    <span
      class="rcx-skeleton rcx-skeleton--circle rcx-css-19saq22"
    />
  </div>
</body>
`;

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <span
      class="rcx-skeleton rcx-skeleton--text"
    />
  </div>
</body>
`;

exports[`renders RectVariant without crashing 1`] = `
<body>
  <div>
    <span
      class="rcx-skeleton rcx-skeleton--rect rcx-css-1q2xu1s"
    />
  </div>
</body>
`;

exports[`renders TextVariant without crashing 1`] = `
<body>
  <div>
    <span
      class="rcx-skeleton rcx-skeleton--text"
    />
  </div>
</body>
`;
